maze.lessons.maze.island.IslandMaze.scala.error
Escaper:3: error: illegal start of statement
[!scala]var etat=0;
^Escaper:6: error: illegal start of statement
     ...
     ^Escaper:9: error: illegal start of statement
     ...
     ^